<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="change_activity">Change Activity</string>
    <string name="back_to_main">Back to Main</string>
    <string name="enter_meal_total">Enter Meal Total</string>
    <string name="select_tip_percent">Select Tip Percent</string>
    <string name="tip_total">Tip Total</string>
    <string name="total_amount_to_pay">Total Amount to Pay</string>
</resources>